# Demo-Project

./: .gitignore  AGENTS.md  Bunge-agribusiness-HANDOFF.md  Bunge-art-of-the-possible-demo-script.md  CODEOWNERS  CODE_REVIEW_2026-05-21.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  VERSION_TWO_PLAN.md
dd-demo-toolkit/: .dockerignore  .env.template  .gitignore  CLAUDE.md  DEMO_RUNBOOK.md  Dockerfile  GA_ROADMAP.md  Makefile  README.md  STYLE_GUIDE.md  WORKFLOW_ACTIONS.md  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml  requirements.txt
dd-demo-toolkit/agentic_demo/: ANNOTATIONS.md  Containerfile  EXPERIMENTS.md  README.md  ascension_annotation_queues.py  ascension_annotations.py  ascension_care_agent.py  ascension_experiments.py  requirements.txt  run.sh
dd-demo-toolkit/data_obs/: Dockerfile  README.md  eval_consumer.py  feature_pipeline.py  producer.py  requirements.txt
dd-demo-toolkit/data_obs/dbt_project/: dbt_project.yml  profiles.yml
dd-demo-toolkit/data_obs/dbt_project/models/: schema.yml  sources.yml
dd-demo-toolkit/data_obs/dbt_project/seeds/: raw_counterparty_exposure.csv  raw_market_feeds.csv
dd-demo-toolkit/data_obs/dbt_runner/: Dockerfile  run_loop.sh
dd-demo-toolkit/data_obs/llm_experiments/: Dockerfile  requirements.txt  risk_eval_experiment.py
dd-demo-toolkit/dd_demo_toolkit/: __init__.py  cli.py  config.py
dd-demo-toolkit/dd_demo_toolkit/resources/: __init__.py  cases.py  dashboards.py  incidents.py  manager.py  monitors.py  notebooks.py  sds.py  services.py  slos.py  teams.py  workflows.py
dd-demo-toolkit/dd_demo_toolkit/simulator/: __init__.py  engine.py  llm_obs.py  rum.py
dd-demo-toolkit/dd_demo_toolkit/simulator/plugins/: __init__.py
dd-demo-toolkit/dd_demo_toolkit/utils/: __init__.py  dd_api.py  otel.py
dd-demo-toolkit/dd_demo_toolkit/validation/: __init__.py  core.py  dashboards.py  monitors.py  notebooks.py  runner.py  slos.py  tags.py  workflows.py
dd-demo-toolkit/dd_demo_toolkit_ui/: README.md  __init__.py  __main__.py  cli.py  dd_validator.py  doctor.py  env_manager.py  process_supervisor.py  provision_rum.py  server.py
dd-demo-toolkit/dd_demo_toolkit_ui/static/: app.css  app.js  index.html
dd-demo-toolkit/docker/authorization-db-worker/: Dockerfile  worker.py
dd-demo-toolkit/docker/postgres/authorization-engine/: entrypoint.sh  init.sql
dd-demo-toolkit/docker/sensing_hospital/: Dockerfile  README.md  ai_care_companion.py  care_event_consumer.py  care_event_router.py  care_experience_platform.py  care_portal.py  care_summary_api.py  clinical_alerts_service.py  db.py  edge_device.py  fleet_config.yaml  manage_rum.py  metrics.py  notification_service.py  patient_context_service.py  patient_ops_emitter.py  remediation_controller.py  requirements.txt  room_sensing_gateway.py  rtls_location_service.py
dd-demo-toolkit/docker/sensing_hospital/ccm/: mock_billing.py
dd-demo-toolkit/docker/sensing_hospital/initdb/: 01_schema.sql  02_datadog.sql
dd-demo-toolkit/docker/sensing_hospital/portal_static/: index.html
dd-demo-toolkit/docker/sensing_hospital/synthetics/: manage_synthetics.py
dd-demo-toolkit/docker/traffic_generator/: Dockerfile  traffic_generator.py
dd-demo-toolkit/k8s/sensing-hospital/: README.md
dd-demo-toolkit/k8s/sensing-hospital/base/: app.yaml  configmap.yaml  datastores.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml
dd-demo-toolkit/scripts/: diagnose_metrics.py  introspect_workflow_actions.py
dd-demo-toolkit/tests/: test_config.py  test_dashboard_list_grouping.py  test_dashboard_live_data.py  test_dashboard_query_coverage.py  test_fleet_location_distribution.py  test_monitor_teardown_synthetics.py  test_teardown_overlay_coverage.py  test_ui_dd_validator.py  test_ui_doctor_validate.py  test_ui_env_manager.py  test_ui_server.py  test_ui_supervisor.py  test_validation.py
dd-demo-toolkit/verticals/agribusiness/: README.md  config.yaml  monitors.yaml  notebooks.yaml  services.yaml  slos.yaml
dd-demo-toolkit/verticals/agribusiness/dashboards/: agribusiness-apps-and-data-platform.json  agribusiness-global-kpi.json  agribusiness-infra-network.json
dd-demo-toolkit/verticals/agribusiness/plugins/: data_platform_cascade.py
dd-demo-toolkit/verticals/finance/: cases.yaml  config.yaml  incidents.yaml  monitors.yaml  notebooks.yaml  services.yaml  slos.yaml  workflows.yaml
dd-demo-toolkit/verticals/finance/dashboards/: command-center.json
dd-demo-toolkit/verticals/finance/overlays/: ey.yaml  payment-processor.yaml
dd-demo-toolkit/verticals/finance/plugins/: payment_cascade.py
dd-demo-toolkit/verticals/healthcare/: cases.yaml  config.yaml  incidents.yaml  monitors.yaml  notebooks.yaml  services.yaml  slos.yaml  workflows.yaml
dd-demo-toolkit/verticals/healthcare/dashboards/: dashboard-environmental-facilities.json  dashboard-infusion-pharmacy.json  dashboard-network-engineering.json  dashboard-nursecall-beds.json  dashboard-patient-experience.json  datadog-dashboard.json  noc-device-detail.json  noc-overview.json
dd-demo-toolkit/verticals/healthcare/overlays/: adventhealth.yaml  ascension.yaml  bd.yaml  quest.yaml
dd-demo-toolkit/verticals/healthcare/plugins/: wifi_cascade.py
dd-demo-toolkit/verticals/hospitality/: cases.yaml  config.yaml  dashboards.yaml  incidents.yaml  monitors.yaml  notebooks.yaml  services.yaml  slos.yaml  workflows.yaml
dd-demo-toolkit/verticals/hospitality/dashboards/: dashboard-ai-stay-planner.json  dashboard-executive-revpar.json  dashboard-iot-connected-room.json  dashboard-it-noc.json  dashboard-it-ops-command-center.json  dashboard-network-meraki.json  dashboard-pep-guest-experience.json  dashboard-rum-loyalty.json
dd-demo-toolkit/verticals/hospitality/plugins/: __init__.py  meraki_iot_cascade.py
dd-demo-toolkit/verticals/insurance/: cases.yaml  config.yaml  incidents.yaml  monitors.yaml  notebooks.yaml  services.yaml  slos.yaml  workflows.yaml
dd-demo-toolkit/verticals/manufacturing/: cases.yaml  config.yaml  incidents.yaml  monitors.yaml  notebooks.yaml  services.yaml  slos.yaml  workflows.yaml
(+71 files in other folders)
