[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-demo-toolkit"
version = "0.1.0"
description = "Modular Datadog demo framework for sales engineers - build realistic demo environments with simulated metrics, traces, and services"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Datadog Sales Engineering", email = "sales-eng@datadoghq.com"}
]
license = {text = "Apache-2.0"}
keywords = ["datadog", "demo", "simulator", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
    "mypy>=1.0",
    # The UI tests use FastAPI's TestClient (httpx-based) and pydantic;
    # both come transitively from `fastapi`, but pinning them in dev
    # makes `pip install -e '.[dev]'` enough to run the full suite
    # without also installing the optional `ui` extras.
    "fastapi>=0.110",
    "httpx>=0.27",
    # ProcessSupervisor tests in test_ui_supervisor.py use @pytest.mark.asyncio
    # to drive the async start/stop/subscribe paths.
    "pytest-asyncio>=0.23",
]
# `pip install dd-demo-toolkit[ui]` pulls in the web layer.
# Kept as an extra (rather than a hard dep) so command-line-only users
# don't have to install FastAPI/uvicorn just to run `dd-demo simulate`.
ui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.urls]
Homepage = "https://github.com/DataDog/dd-demo-toolkit"
Documentation = "https://github.com/DataDog/dd-demo-toolkit/blob/main/README.md"
Repository = "https://github.com/DataDog/dd-demo-toolkit"
Issues = "https://github.com/DataDog/dd-demo-toolkit/issues"

[project.scripts]
dd-demo = "dd_demo_toolkit.cli:main"
# The web UI launcher. Requires the `ui` optional dependency group
# (`pip install dd-demo-toolkit[ui]`) — the import in dd_demo_toolkit_ui.cli
# will fail with a clear error if FastAPI/uvicorn aren't installed.
dd-demo-ui = "dd_demo_toolkit_ui.cli:main"

[tool.setuptools]
packages = ["dd_demo_toolkit", "dd_demo_toolkit_ui"]

[tool.setuptools.package-data]
dd_demo_toolkit = ["py.typed"]
# Ship the bundled vanilla UI alongside the wheel so `dd-demo-ui` works
# straight after `pip install` without needing the source tree.
dd_demo_toolkit_ui = ["static/*"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
# Coverage for both packages — keep the UI honest as it grows.
addopts = "-v --cov=dd_demo_toolkit --cov=dd_demo_toolkit_ui --cov-report=term-missing"
testpaths = ["tests"]
# pytest-asyncio: STRICT mode requires every async test to be explicitly
# marked. Prevents accidental "sync test calling async fn → silent skip"
# bugs. function-scoped event loop = each test gets a fresh loop, which
# matches the supervisor's per-test lifecycle.
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
